[tool.poetry]
name = "AND"
version = "0.1.0"
description = "author name disambiguation"
authors = ["Ralf"]
license = "free"

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.4"
networkx = "^2.5.1"
sklearn = "^0.0"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.2"
plotly = "^4.14.3"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
